k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubewise-ingress
  namespace: kubewise
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /generate-load
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /stress
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /redis
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /summary
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /dashboard
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /nodes
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /deployments
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /pods
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /recommendations
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /cluster-score
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
